--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,10 @@ jobs:
       - run:
           name: "print-machine-info"
           command: "echo Hello, World!;uname -a"
+      - run:
+          name: "What branch am I on now?"
+          command: "echo $CIRCLE_BRANCH"          
+          
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
