--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  save-say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
@@ -16,7 +16,11 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "echo Hello, World!"
+          command: "echo Hello, World! > target/output.txt"
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths:
+            - target/output.txt
   print-machine-info:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -31,10 +35,12 @@ jobs:
           command: "echo Hello, World!;uname -a"
       - run:
           name: "What branch am I on now?"
-          command: "echo $CIRCLE_BRANCH"          
+          command: "echo $CIRCLE_BRANCH"
+      - attach_workspace:
+          at: /tmp/workspace          
       - run:
           name: "What is global variable now?"
-          command: "echo $New_Name"   
+          command: "cat target/output.txt"   
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
