--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,11 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "mkdir -p /tmp/workspace/target;echo 'Hello, World!' > /tmp/workspace/target/output.txt"
+          command: "echo 'Hello, World!' > ~/output.txt"
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: ~/
           paths:
-            - target/output.txt
+            - output.txt
   print-machine-info:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -37,10 +37,11 @@ jobs:
           name: "What branch am I on now?"
           command: "echo $CIRCLE_BRANCH"
       - attach_workspace:
-          at: /tmp/workspace          
+          at: ~/         
       - run:
           name: "What is global variable now?"
-          command: "ls -lh /tmp/workspace/target/"   
+          command: "ls -lh ~/"
+      - run: cat ~/output.txt   
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
