--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           command: "ls -lh ~/"
       - run: cat ~/output.txt 
       - print_pipeline_id:
-          - to: "$CIRCLE_WORKFLOW_ID" 
+          - to: "${CIRCLE_WORKFLOW_ID}"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
