--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,8 @@
 version: 2.1
 commands:
   print_pipeline_id:
-    description: "A very simple command for demonstration purposes"
-    parameters:
-      to:
-        type: string
-        default: "Hello World"
     steps:
-      - run: echo << parameters.to >>
+      - run: echo ${CIRCLE_WORKFLOW_ID}
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -51,8 +46,7 @@ jobs:
           name: "What is global variable now?"
           command: "ls -lh ~/"
       - run: cat ~/output.txt 
-      - print_pipeline_id:
-          - to: "${CIRCLE_WORKFLOW_ID}"
+      - print_pipeline_id
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
