--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,8 @@ commands:
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   save-say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
@@ -26,12 +22,8 @@ jobs:
           paths:
             - output.txt
   print-machine-info:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
@@ -46,10 +38,9 @@ jobs:
           name: "What is global variable now?"
           command: "ls -lh ~/"
       - run: cat ~/output.txt 
-      - print_pipeline_id
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+      - print_pipeline_ids
+      - run: echo "test on fail"
+            when: on_fail       
 workflows:
   say-hello-workflow:
     jobs:
